--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -43,7 +43,7 @@
         // 서버에 AJAX 요청 보내기
         $.ajax({
             type: 'POST',
-            url: 'http://localhost:3000/auth/kakao/sign-up?code=' + codeParam ,
+            url: '/auth/kakao/sign-up?code=' + codeParam ,
             contentType: 'application/json',
             data: JSON.stringify(formData),
             success: function(response) {
