feat: 그냥 올리자...

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,8 +8,8 @@
 <body>
 <h2>로그인</h2>
 <form id="loginForm">
-    <p>아이디 : <input type="text" name="loginId" value="qwerqwer"></p>
-    <p>비밀번호 : <input type="text" name="password" value="qwerqwer1!"></p>
+    <p>아이디 : <input type="text" name="loginId" value="test11"></p>
+    <p>비밀번호 : <input type="text" name="password" value="test1."></p>
     <p>
         <input type="button" id="submitBtn" value="로그인">
     </p>
