--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -8,8 +8,8 @@
 <body>
 <h2 th:text="${loginType != 'auth' ? loginType + ' 회원가입' : '회원가입'}"></h2>
 <form id="signupForm">
-    <p>아이디 : <input type="text" name="loginId" value="test1"1></p>
-    <p>비밀번호 : <input type="text" name="password" value="password!11"></p>
+    <p>아이디 : <input type="text" name="loginId" value="test111"1></p>
+    <p>비밀번호 : <input type="text" name="password" value="password.11"></p>
     <p>이름 : <input type="text" name="name" value="testname1"></p>
     <p>연락처 : <input type="text" name="phoneNumber" value="010-0000-0220"></p>
     <p>생일 : <input type="text" name="birthday" value="1999-12-12"></p>
